# dumb_composer

./: .gitignore  README.md  batch_composer.py  example_commands.md  notes.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: prefabs.md
docs/examples/: Bach_Chorale_1.txt
dumb_composer/: __init__.py  __main__.py  chord_spacer.py  composer_wrangler.py  constants.py  dumb_accompanist.py  dumb_composer.py  four_part_composer.py  from_ml_out.py  incremental_contrapuntist.py  melodist.py  new_composer.py  pattern_handler.py  patterns.py  pitch_utils.py  prefab_applier.py  rhythmist.py  scalar_ornamentation.py  shared_classes.py  structural_partitioner.py  suspensions.py  time.py  time_utils.py  two_part_contrapuntist.py  utils.py
dumb_composer/chords/: chords.py  intervals.py
dumb_composer/classes/: score_interfaces.py  (+2 more)
scripts/: run_incremental_contrapuntist.py  run_incremental_contrapuntist_with_accomps.py  run_incremental_contrapuntist_with_prefabs.py  run_incremental_contrapuntist_with_prefabs_and_accomps.py
settings/: chorale_interval_weights.yaml
tests/: conftest.py  get_changed_files.py  test_chord_spacer.py  test_composer_wrangler.py  test_dumb_accompanist.py  test_dumb_composer.py  test_four_part_composer.py  test_from_ml_out.py  test_helpers.py  test_incremental_contrapuntalist.py  test_melodist.py  test_new_composer.py  test_pattern_maker.py  test_pitch_utils.py  test_prefab_applier.py  test_rhythmist.py  test_shared_classes.py  test_structural_partitioner.py  test_time.py  test_two_part_contrapuntist.py
user_scripts/: synthetic_data.sh
(+55 files in other folders)
